--- a/src/plantenApp/resources/config.properties
+++ b/src/plantenApp/resources/config.properties
@@ -1,4 +1,4 @@
 db.jdbcDriver = com.microsoft.sqlserver.jdbc.SQLServerDriver
-db.url        = jdbc:sqlserver://localhost\\VIVES;database=planten
+db.url        = jdbc:sqlserver://localhost\\SQLVIVES;database=planten
 db.user       = sa
-db.password   = Vives2019!
+db.password   = VIVES2019!
