--- a/src/plantenApp/resources/config.properties
+++ b/src/plantenApp/resources/config.properties
@@ -1,4 +1,4 @@
 db.jdbcDriver = com.microsoft.sqlserver.jdbc.SQLServerDriver
 db.url        = jdbc:sqlserver://LAPTOP-D94HUFP8\\VIVES;database=planten
 db.user       = sa
-db.password   = VIVES2019!
+db.password   = Vives2019!
